[package]
name = "raushan-explorer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "raushan"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
colored = "2.1"
chrono = "0.4"
solana-client = "1.18.26"
solana-sdk = "1.18.26"
solana-transaction-status = "1.18.26"
prettytable-rs = "^0.10"
